bench/out/compute-program/20260907-linux-application-matrix/sources/runtime/bridge/webgpu-addon/doe_napi_internal.h

typedef void* WGPUAdapter;
typedef void* WGPUDevice;
typedef void* WGPUBuffer;
typedef void* WGPUShaderModule;
typedef void* WGPUBindGroupLayout;
typedef void* WGPUQuerySet;
typedef void* WGPUTexture;
typedef void* WGPUTextureView;
typedef void* WGPUSampler;
typedef uint32_t WGPUBool;
typedef struct { uint64_t id; } WGPUFuture;
typedef struct { const char* data; size_t length; } WGPUStringView;
typedef struct { WGPUFuture future; WGPUBool completed; } WGPUFutureWaitInfo;
typedef struct { void* next; uint32_t sType; } WGPUChainedStruct;
typedef uint32_t WGPUFeatureName;
typedef uint32_t WGPUDeviceLostReason;
typedef uint32_t WGPUErrorType;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    uint64_t usage;
    uint64_t size;
    WGPUBool mappedAtCreation;
} WGPUBufferDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; } WGPUCommandEncoderDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; } WGPUCommandBufferDescriptor;
typedef struct { WGPUChainedStruct chain; WGPUStringView code; } WGPUShaderSourceWGSL;
typedef struct {
    WGPUStringView entryPoint;
    void* layout; /* WGPUPipelineLayout or NULL for "auto" */
} WGPUShaderModuleCompilationHint;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    size_t compilationHintCount;
    const WGPUShaderModuleCompilationHint* compilationHints;
} WGPUShaderModuleDescriptor;
typedef struct {
    void* nextInChain;
    WGPUShaderModule module;
    WGPUStringView entryPoint;
    size_t constantCount;
    void* constants;
} WGPUComputeState;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    void* layout;
    WGPUComputeState compute;
} WGPUComputePipelineDescriptor;
typedef struct { void* nextInChain; uint32_t type; WGPUBool hasDynamicOffset; uint64_t minBindingSize; } WGPUBufferBindingLayout;
typedef struct { void* nextInChain; uint32_t type; } WGPUSamplerBindingLayout;
typedef struct { void* nextInChain; uint32_t sampleType; uint32_t viewDimension; WGPUBool multisampled; } WGPUTextureBindingLayout;
typedef struct { void* nextInChain; uint32_t access; uint32_t format; uint32_t viewDimension; } WGPUStorageTextureBindingLayout;
typedef struct {
    void* nextInChain;
    uint32_t binding;
    uint64_t visibility;
    uint32_t bindingArraySize;
    WGPUBufferBindingLayout buffer;
    WGPUSamplerBindingLayout sampler;
    WGPUTextureBindingLayout texture;
    WGPUStorageTextureBindingLayout storageTexture;
} WGPUBindGroupLayoutEntry;
typedef struct { void* nextInChain; WGPUStringView label; size_t entryCount; const WGPUBindGroupLayoutEntry* entries; } WGPUBindGroupLayoutDescriptor;
typedef struct {
    void* nextInChain;
    uint32_t binding;
    WGPUBuffer buffer;
    uint64_t offset;
    uint64_t size;
    WGPUSampler sampler;
    WGPUTextureView textureView;
} WGPUBindGroupEntry;
typedef struct { void* nextInChain; WGPUStringView label; WGPUBindGroupLayout layout; size_t entryCount; const WGPUBindGroupEntry* entries; } WGPUBindGroupDescriptor;
typedef struct { void* nextInChain; WGPUStringView label; size_t bindGroupLayoutCount; const WGPUBindGroupLayout* bindGroupLayouts; uint32_t immediateSize; } WGPUPipelineLayoutDescriptor;
typedef struct {
    const WGPUChainedStruct* nextInChain;
    WGPUQuerySet querySet;
    uint32_t beginningOfPassWriteIndex;
    uint32_t endOfPassWriteIndex;
} WGPUPassTimestampWrites;
typedef WGPUPassTimestampWrites WGPUComputePassTimestampWrites;
typedef struct { void* nextInChain; WGPUStringView label; const WGPUComputePassTimestampWrites* timestampWrites; } WGPUComputePassDescriptor;
typedef struct { uint32_t width; uint32_t height; uint32_t depthOrArrayLayers; } WGPUExtent3D;
typedef struct { uint32_t x; uint32_t y; uint32_t z; } WGPUOrigin3D;
typedef struct { uint64_t offset; uint32_t bytesPerRow; uint32_t rowsPerImage; } WGPUTexelCopyBufferLayout;
typedef struct { WGPUTexelCopyBufferLayout layout; WGPUBuffer buffer; } WGPUTexelCopyBufferInfo;
typedef struct { WGPUTexture texture; uint32_t mipLevel; WGPUOrigin3D origin; uint32_t aspect; } WGPUTexelCopyTextureInfo;
typedef struct {
    void* nextInChain; WGPUStringView label; uint64_t usage; uint32_t dimension;
    WGPUExtent3D size; uint32_t format; uint32_t mipLevelCount; uint32_t sampleCount;
    size_t viewFormatCount; const uint32_t* viewFormats;
    uint32_t textureBindingViewDimension;
} WGPUTextureDescriptor;
typedef struct {
    void* nextInChain; WGPUStringView label; uint32_t format; uint32_t dimension;
    uint32_t baseMipLevel; uint32_t mipLevelCount; uint32_t baseArrayLayer; uint32_t arrayLayerCount;
    uint32_t aspect; uint64_t usage;
    uint32_t swizzleR; uint32_t swizzleG; uint32_t swizzleB; uint32_t swizzleA;
} WGPUTextureViewDescriptor;
typedef struct {
    void* nextInChain; WGPUStringView label;
    uint32_t addressModeU; uint32_t addressModeV; uint32_t addressModeW;
    uint32_t magFilter; uint32_t minFilter; uint32_t mipmapFilter;
    float lodMinClamp; float lodMaxClamp; uint32_t compare; uint16_t maxAnisotropy;
} WGPUSamplerDescriptor;
typedef struct { double r; double g; double b; double a; } WGPUColor;
typedef struct {
    void* nextInChain; WGPUTextureView view; uint32_t depthSlice; WGPUTextureView resolveTarget;
    uint32_t loadOp; uint32_t storeOp; WGPUColor clearValue;
} WGPURenderPassColorAttachment;
typedef struct { void* nextInChain; WGPUStringView key; double value; } WGPUConstantEntry;
typedef struct {
    void* nextInChain;
    uint32_t maxTextureDimension1D; uint32_t maxTextureDimension2D; uint32_t maxTextureDimension3D;
    uint32_t maxTextureArrayLayers; uint32_t maxBindGroups; uint32_t maxBindGroupsPlusVertexBuffers;
    uint32_t maxBindingsPerBindGroup; uint32_t maxDynamicUniformBuffersPerPipelineLayout;
    uint32_t maxDynamicStorageBuffersPerPipelineLayout; uint32_t maxSampledTexturesPerShaderStage;
    uint32_t maxSamplersPerShaderStage; uint32_t maxStorageBuffersPerShaderStage;
    uint32_t maxStorageTexturesPerShaderStage; uint32_t maxUniformBuffersPerShaderStage;
    uint64_t maxUniformBufferBindingSize; uint64_t maxStorageBufferBindingSize;
    uint32_t minUniformBufferOffsetAlignment; uint32_t minStorageBufferOffsetAlignment;
    uint32_t maxVertexBuffers; uint64_t maxBufferSize; uint32_t maxVertexAttributes;
    uint32_t maxVertexBufferArrayStride; uint32_t maxInterStageShaderVariables;
    uint32_t maxColorAttachments; uint32_t maxColorAttachmentBytesPerSample;
    uint32_t maxComputeWorkgroupStorageSize; uint32_t maxComputeInvocationsPerWorkgroup;
    uint32_t maxComputeWorkgroupSizeX; uint32_t maxComputeWorkgroupSizeY;
    uint32_t maxComputeWorkgroupSizeZ; uint32_t maxComputeWorkgroupsPerDimension;
    uint32_t maxImmediateSize;
} WGPULimits;
typedef struct { void* nextInChain; WGPUStringView label; } WGPUQueueDescriptor;
/* Callback types */
typedef void (*WGPURequestAdapterCallback)(uint32_t status, WGPUAdapter adapter, WGPUStringView message, void* userdata1, void* userdata2);
typedef void (*WGPURequestDeviceCallback)(uint32_t status, WGPUDevice device, WGPUStringView message, void* userdata1, void* userdata2);
typedef struct { void* nextInChain; uint32_t mode; WGPURequestAdapterCallback callback; void* userdata1; void* userdata2; } WGPURequestAdapterCallbackInfo;
typedef struct { void* nextInChain; uint32_t mode; WGPURequestDeviceCallback callback; void* userdata1; void* userdata2; } WGPURequestDeviceCallbackInfo;
typedef void (*WGPUBufferMapCallback)(uint32_t status, WGPUStringView message, void* userdata1, void* userdata2);
typedef void (*WGPUQueueWorkDoneCallback)(uint32_t status, WGPUStringView message, void* userdata1, void* userdata2);
typedef struct { void* nextInChain; uint32_t mode; WGPUQueueWorkDoneCallback callback; void* userdata1; void* userdata2; } WGPUQueueWorkDoneCallbackInfo;
typedef struct { void* nextInChain; uint32_t mode; WGPUBufferMapCallback callback; void* userdata1; void* userdata2; } WGPUBufferMapCallbackInfo;
typedef void (*WGPUDeviceLostCallback)(const void* device, WGPUDeviceLostReason reason, WGPUStringView message, void* userdata1, void* userdata2);
typedef void (*WGPUUncapturedErrorCallback)(const void* device, WGPUErrorType type, WGPUStringView message, void* userdata1, void* userdata2);
typedef struct { void* nextInChain; uint32_t mode; WGPUDeviceLostCallback callback; void* userdata1; void* userdata2; } WGPUDeviceLostCallbackInfo;
typedef struct { void* nextInChain; WGPUUncapturedErrorCallback callback; void* userdata1; void* userdata2; } WGPUUncapturedErrorCallbackInfo;
typedef struct {
    void* nextInChain;
    WGPUStringView label;
    size_t requiredFeatureCount;
    const WGPUFeatureName* requiredFeatures;
    const WGPULimits* requiredLimits;
    WGPUQueueDescriptor defaultQueue;
    WGPUDeviceLostCallbackInfo deviceLostCallbackInfo;
    WGPUUncapturedErrorCallbackInfo uncapturedErrorCallbackInfo;
} WGPUDeviceDescriptor;
typedef struct {
    void* nextInChain;
    uint32_t featureLevel;       /* WGPU_FEATURE_LEVEL_* */
    uint32_t powerPreference;
    WGPUBool forceFallbackAdapter;
    uint32_t backendType;        /* ignored by Doe; 0 = undefined */
    void* compatibleSurface;     /* NULL for headless */
} WGPURequestAdapterOptions;